Juggler image added

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                                 </div>
                                 <span class="badge-checkbox">☐</span>
                             </div>
-                            <div class="badge-option" data-value="multitasking" data-image="multitasking.png">
+                            <div class="badge-option" data-value="juggler" data-image="juggler.png">
                                 <div class="badge-option-content">
-                                    <img src="./assets/images/multitasking.png" alt="Multitasking" class="badge-icon">
-                                    <span class="badge-label">Multitasking</span>
+                                    <img src="./assets/images/juggler.png" alt="Juggler" class="badge-icon">
+                                    <span class="badge-label">Juggler</span>
                                 </div>
                                 <span class="badge-checkbox">☐</span>
                             </div>
